adicionei um paragrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat dolore minima natus ipsa accusantium consequatur, esse nesciunt ratione, et obcaecati quas dolor. Culpa quasi assumenda, minima molestias voluptatibus blanditiis rem.</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos accusamus esse dignissimos similique odit, iste, commodi rerum perferendis quidem magni laudantium tempore reiciendis sequi fugiat recusandae dolorum nesciunt quasi at.</p>
 </body>
 </html>
